--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@babel/core": "^7.21.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.3",
+    "postcss": "^8.4.22",
     "process": "^0.11.10",
-    "react-placeholder": "^4.1.0"
+    "react-placeholder": "^4.1.0",
+    "tailwindcss": "^3.3.1"
   },
   "dependencies": {
     "react": "^18.2.0",
